tests/NormalTests/paczka1/fuzzy1/17087862.err
Error in line 11: 4ZdksQ1SD A797 6,5
Error in line 31: nxXH8UM1mHN A553 68,56
Error in line 33: nxXH8UM1mHN A553 27,4
Error in line 17: 4ZdksQ1SD A553 16,8
